--- a/Copy_of_DataFeatures&Augmentation.ipynb
+++ b/Copy_of_DataFeatures&Augmentation.ipynb
@@ -612,7 +612,7 @@
         "plt.hist(bound1, alpha=0.7);\n",
         "plt.hist(bound0, alpha=0.7);"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -733,7 +733,7 @@
         "id": "cbl7r5pYq8En",
         "outputId": "25806bb1-ad28-40c5-b258-2eb177ca8ff2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -780,7 +780,7 @@
         "id": "wgPlSWPTq8U8",
         "outputId": "4c626a64-7da7-4b0a-87d3-af0050d458a2"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -826,7 +826,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# our own features \n",
+        "# 3.our own features \n",
         "#Since the dataset comprises images, we can extract various features to analyze the dataset. \n",
         "#the featuers that can be used are : pixel intensity , image size , edges and contours \n",
         "# The intensity or value of each pixel in the image can be considered as a feature. For the MNIST dataset, these pixel intensity values range from 0 to 255 in grayscale.\n",
@@ -838,12 +838,13 @@
       "metadata": {
         "id": "cKZ3Ex3Tq8hB"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#4\n",
         "no3=train_X[train_y==3,:,:]\n",
         "no4=train_X[train_y==4,:,:]\n",
         "\n",
@@ -861,7 +862,7 @@
         "id": "BJKg6jDpq9EV",
         "outputId": "6a64af2c-b5ef-434f-c62b-8d4475cc1978"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +945,7 @@
         "id": "dl8M1UJKq9WE",
         "outputId": "731f8f59-5db3-4bb6-ec49-8de8e27e041e"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1366,7 +1367,7 @@
         },
         "outputId": "68f62cd3-3b17-4273-a5cc-027e72604fc5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
